Cherrry pick 1.x changes - adjustments of icons and buttons

--- a/view/frontend/templates/component/hero_carousel.phtml
+++ b/view/frontend/templates/component/hero_carousel.phtml
@@ -4,9 +4,8 @@ $componentConfiguration = $block->getData();
 
 /** @var \MageSuite\ContentConstructorFrontend\Model\Component\HeroCarousel $viewModel */
 $viewModel = $block->getViewModel();
-
+$visibility = $block->getVisibilityClass();
 $mobileDisplayVariantClass = '';
-$sizes = '(max-width: 48em) 100vw, (max-width: 1200px) 80vw, 960px';
 
 if ($componentConfiguration['mobileDisplayVariant']['id'] == 'list') {
     $mobileDisplayVariantClass = 'cs-hero--as-list-mobile';
@@ -15,10 +14,11 @@ if ($componentConfiguration['mobileDisplayVariant']['id'] == 'list') {
 }
 
 ?>
-<div class="cs-container cs-container--edge-to-edge cs-container--noscroll ">
-    <div class="cs-container__inner">
-        <div class="<?=$block->getVisibilityClass()?>">
-            <div class="cs-hero <?= $mobileDisplayVariantClass ?> cs-hero--centered">
+
+<div <?= empty($visibility) ? '' : 'class="' . $visibility . '"'; ?>>
+    <div class="cs-container cs-container--hero">
+        <div class="cs-container__inner">
+            <div class="cs-hero <?= $mobileDisplayVariantClass ?> <?= $block->getVar('hero_carousel/additional_css_classes'); ?>">
                 <div class="cs-hero__carousel">
                     <div class="cs-hero__wrapper">
                         <ul class="cs-hero__slides">
@@ -39,7 +39,7 @@ if ($componentConfiguration['mobileDisplayVariant']['id'] == 'list') {
                                                         class="cs-hero__image"
                                                         src="<?= $imageSrc ?>"
                                                         srcset="<?= $slide->getSrcSet() ?>"
-                                                        sizes="<?= $sizes ?>"
+                                                        sizes="<?= $block->getVar('hero_carousel/sizes'); ?>"
                                                         alt="<?= $slide->getAlt() ?>"
                                                 >
                                             </figure>
@@ -61,11 +61,17 @@ if ($componentConfiguration['mobileDisplayVariant']['id'] == 'list') {
 
                                                 <?php if ($slide->getHref() and $slide->getData('ctaLabel')): ?>
                                                     <div class="cs-hero__cta">
-                                                <span role="button"
-                                                      class="cs-button cs-button--type_long cs-button--look_default">
-                                                    <span class="cs-button__span"><?= $slide->getData('ctaLabel') ?></span>
-                                                        <svg class="cs-button__icon"><use
-                                                                    xlink:href="#arrow_next"></use></svg>
+                                                <span role="button" class="cs-hero__cta-button">
+                                                    <span class="cs-hero__cta-button-span"><?= $slide->getData('ctaLabel') ?></span>
+                                                    <?= $this->getLayout()
+                                                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                                                ->setIconUrl($block->getVar('hero_carousel/cta_button_icon_path'))
+                                                                ->setCssClass('cs-hero__cta-button-icon')
+                                                                ->setInlined(true)
+                                                                ->setLazyLoaded(false)
+                                                                ->toHtml(); 
+                                                    ?>
+
                                                 </span>
                                                     </div>
                                                 <?php endif; ?>
@@ -80,18 +86,33 @@ if ($componentConfiguration['mobileDisplayVariant']['id'] == 'list') {
                     </div>
                 </div>
 
-                <button class="cs-hero__nav cs-hero__nav--prev cs-hero__nav--large" type="button">
-                    <svg class="cs-hero__nav-icon">
-                        <use xlink:href="#icon_arrow-left"></use>
-                    </svg>
-                </button>
-                <button class="cs-hero__nav cs-hero__nav--next cs-hero__nav--large" type="button">
-                    <svg class="cs-hero__nav-icon">
-                        <use xlink:href="#icon_arrow-right"></use>
-                    </svg>
-                </button>
+                <?php if($block->getVar('hero_carousel/navigation/show')): ?>
+                    <button class="cs-hero__nav cs-hero__nav--prev <?= $block->getVar('hero_carousel/navigation/arrows/prev/additional_css_classes') ?>"
+                            type="button">
+                            <?= $this->getLayout()
+                                        ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                        ->setIconUrl($block->getVar('hero_carousel/navigation/arrows/prev/path'))
+                                        ->setCssClass('cs-hero__nav-icon')
+                                        ->setInlined(true)
+                                        ->toHtml(); 
+                            ?>
+                    </button>
+                    <button class="cs-hero__nav cs-hero__nav--next <?= $block->getVar('hero_carousel/navigation/arrows/next/additional_css_classes') ?>"
+                            type="button">
+                            <?= $this->getLayout()
+                                        ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                        ->setIconUrl($block->getVar('hero_carousel/navigation/arrows/next/path'))
+                                        ->setCssClass('cs-hero__nav-icon')
+                                        ->setInlined(true)
+                                        ->toHtml(); 
+                            ?>
+                    </button>
+                <?php endif; ?>
 
-                <ul class="cs-hero__pagination"></ul>
+
+                <?php if($block->getVar('hero_carousel/pagination/show')): ?>
+                    <ul class="cs-hero__pagination <?= $block->getVar('hero_carousel/pagination/additional_css_classes') ?>"></ul>
+                <?php endif; ?>
             </div>
         </div>
     </div>
