--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -4,11 +4,13 @@ $componentConfiguration = $block->getData();
 
 /** @var \MageSuite\ContentConstructorFrontend\Model\Component\ProductCarousel $viewModel */
 $viewModel = $block->getViewModel();
+$visibility = $block->getVisibilityClass();
 ?>
-<div class="cs-container cs-container--products-carousel">
-    <div class="cs-container__inner">
-        <div class="<?=$block->getVisibilityClass()?>">
-            <div class="cs-products-carousel">
+
+<div <?= empty($visibility) ? '' : 'class="' . $visibility . '"'; ?>>
+    <div class="cs-container cs-container--products-carousel">
+        <div class="cs-container__inner">
+            <div class="cs-products-carousel <?=$block->getVar('product_carousel/additional_css_classes');?>">
                 <div class="cs-products-carousel__carousel">
                     <div class="cs-products-carousel__wrapper">
                         <ul class="cs-products-carousel__slides">
@@ -24,21 +26,29 @@ $viewModel = $block->getViewModel();
                         </ul>
                     </div>
 
-                    <?php if ($block->getVar('product_carousel/show_navigation')): ?>
-                        <button class="cs-products-carousel__nav cs-products-carousel__nav--prev" type="button">
-                            <svg class="cs-products-carousel__nav-icon">
-                                <use xlink:href="<?= $block->getVar('product_carousel/icon/left') ?>"></use>
-                            </svg>
+                    <?php if ($block->getVar('product_carousel/navigation/show')): ?>
+                        <button class="cs-products-carousel__nav cs-products-carousel__nav--prev <?= $block->getVar('brand_carousel/navigation/arrows/prev/additional_css_classes') ?>" type="button">
+                            <?= $this->getLayout()
+                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                ->setIconUrl($block->getVar('product_carousel/navigation/arrows/prev/path'))
+                                ->setCssClass("cs-products-carousel__nav-icon")
+                                ->setInlined(true)
+                                ->toHtml(); 
+                            ?>
                         </button>
-                        <button class="cs-products-carousel__nav cs-products-carousel__nav--next" type="button">
-                            <svg class="cs-products-carousel__nav-icon">
-                                <use xlink:href="<?= $block->getVar('product_carousel/icon/right') ?>"></use>
-                            </svg>
+                        <button class="cs-products-carousel__nav cs-products-carousel__nav--next <?= $block->getVar('brand_carousel/navigation/arrows/next/additional_css_classes') ?>" type="button">
+                            <?= $this->getLayout()
+                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                ->setIconUrl($block->getVar('product_carousel/navigation/arrows/next/path'))
+                                ->setCssClass("cs-products-carousel__nav-icon")
+                                ->setInlined(true)
+                                ->toHtml(); 
+                            ?>
                         </button>
                     <?php endif; ?>
 
                     <?php if ($block->getVar('product_carousel/show_pagination')): ?>
-                        <ul class="cs-products-carousel__pagination"></ul>
+                        <ul class="cs-products-carousel__pagination <?= $block->getVar('product_carousel/pagination/additional_css_classes') ?>"></ul>
                     <?php endif; ?>
                 </div>
             </div>
