--- a/view/frontend/templates/component/separator.phtml
+++ b/view/frontend/templates/component/separator.phtml
@@ -1,12 +1,15 @@
 <?php
 /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Separator */
 $visibility = $block->getVisibilityClass();
+
+$componentClasses = $block->getSkipSpacing() ? ' cs-separator--skip-spacing' : '';
+$componentClasses .= ' ' . $block->getVar('separator/additional_css_classes');
 ?>
 
-<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--separator">
         <div class="cs-container__inner">
-            <hr class="cs-separator <?=$block->getVar('separator/additional_css_classes');?>">
+            <hr class="cs-separator<?= $componentClasses ?>">
         </div>
     </div>
 </div>
