--- a/view/frontend/templates/component/category_links.phtml
+++ b/view/frontend/templates/component/category_links.phtml
@@ -6,12 +6,16 @@ $categories = $viewModel->getCategories();
 $subCategories = $categories['sub_categories'];
 $shouldShowProductsCount = $viewModel->shouldShowProductsCount();
 $visibility = $block->getVisibilityClass();
+
+$componentClasses = $viewModel->hasSubcategories() ? ' ' : " cs-category-links--no-subcats";
+$componentClasses .= $block->getSkipSpacing() ? ' cs-category-links--skip-spacing' : ''; 
+$componentClasses .= ' ' . $block->getVar('category_links/additional_css_classes');
 ?>
 
-<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--category-links">
         <div class="cs-container__inner">
-            <div class="cs-category-links <?php if(!$viewModel->hasSubcategories()): ?>cs-category-links--no-subcats <?php endif; ?><?= $block->getVar('category_links/additional_css_classes'); ?>" data-mage-init='{"collapsible":{"mediaQueryScope":"(max-width: 767px)"}}'>
+            <div class="cs-category-links<?= $componentClasses ?>" data-mage-init='{"collapsible":{"mediaQueryScope":"(max-width: 767px)"}}'>
             <?php if($block->getVar('category_links/show_title')): ?>
                 <h2 class="cs-category-links__title"><?= $categories['main_category']['name'] ?></h2>
             <?php endif; ?>
@@ -48,10 +52,15 @@ $visibility = $block->getVisibilityClass();
                         <ul class="cs-category-links__list-all">
                             <li class="cs-category-links__list-all-item">
                                 <a href="<?=$categories['main_category']['url']?>" class="cs-category-links__link">
-                                    <?php echo __($block->getVar('category_links/all_products/label')); ?> <?php if($shouldShowProductsCount): ?> <span class="cs-category-links__qty"><?=$categories['main_category']['products_count']?></span><?php endif; ?>
-                                    <svg class="cs-category-links__list-all-icon">
-                                        <use xlink:href="<?php echo $block->getVar('category_links/all_products/icon'); ?>"></use>
-                                    </svg>
+                                    <?php echo __($block->getVar('category_links/all_products/label')); ?> 
+                                    <?php if($shouldShowProductsCount): ?><span class="cs-category-links__qty"><?=$categories['main_category']['products_count']?></span><?php endif; ?>
+                                    <?= $this->getLayout()
+                                            ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                            ->setIconUrl($block->getVar('category_links/all_products/icon'))
+                                            ->setCssClass('cs-category-links__list-all-icon')
+                                            ->setInlined(true)
+                                            ->toHtml(); 
+                                    ?>
                                 </a>
                             </li>
                         </ul>
