--- a/view/frontend/templates/component/cms_teaser.phtml
+++ b/view/frontend/templates/component/cms_teaser.phtml
@@ -6,8 +6,6 @@ $componentConfiguration = $block->getData();
 $viewModel = $block->getViewModel();
 $visibility = $block->getVisibilityClass();
 
-$mix = 'cs-image-teaser--cms-pages';
-
 $isSlider = false;
 $isSliderMobile = false;
 
@@ -35,21 +33,23 @@ foreach ($slides as $slide) {
     $slide->setData('displayVariant', $textDisplayVariant);
 }
 
+$componentClasses = ' cs-image-teaser--cms-pages';
+$componentClasses .= $block->getSkipSpacing() ? ' cs-image-teaser--skip-spacing' : ''; 
+$componentClasses .= ' ' . $block->getVar('cms_teaser/additional_css_classes');
 ?>
 
-<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--cms-teaser">
         <div class="cs-container__inner">
             <div class="cs-image-teaser
              cs-image-teaser--items-in-row-<?= $itemsPerRow ?>
              cs-image-teaser--items-in-row-mobile-<?= $itemsPerViewMobile ?>
              <?= $isSlider ? 'cs-image-teaser--slider' : '' ?>
-             <?= $mix ?>"
+             <?= $componentClasses ?>"
                  data-items-per-view="<?= $itemsPerView ?>"
                 <?= $itemsPerViewMobile ? 'data-mobile-items-per-view="' . $itemsPerViewMobile . '"' : '' ?>
                  data-is-slider="<?= $isSlider ?>"
-                 data-mobile-is-slider="<?= $isSliderMobile ?>"
-                <?= $block->getVar('cms_teaser/additional_css_classes'); ?>>
+                 data-mobile-is-slider="<?= $isSliderMobile ?>">
 
                 <div class="cs-image-teaser__carousel">
                     <div class="cs-image-teaser__wrapper cs-image-teaser__wrapper--content-display-<?= $displayVariant ?>">
@@ -121,7 +121,6 @@ foreach ($slides as $slide) {
                                                                 ->setIconUrl($block->getVar('cms_teaser/cta_button_icon_path'))
                                                                 ->setCssClass('cs-image-teaser__cta-button-icon')
                                                                 ->setInlined(true)
-                                                                ->setLazyLoaded(false)
                                                                 ->toHtml(); 
                                                         ?>
                                                         </span>
@@ -145,7 +144,6 @@ foreach ($slides as $slide) {
                                 ->setIconUrl($block->getVar('cms_teaser/navigation/arrows/prev/path'))
                                 ->setCssClass('cs-image-teaser__nav-icon')
                                 ->setInlined(true)
-                                ->setLazyLoaded(false)
                                 ->toHtml(); 
                             ?>
                         </button>
@@ -156,7 +154,6 @@ foreach ($slides as $slide) {
                                 ->setIconUrl($block->getVar('cms_teaser/navigation/arrows/next/path'))
                                 ->setCssClass('cs-image-teaser__nav-icon')
                                 ->setInlined(true)
-                                ->setLazyLoaded(false)
                                 ->toHtml(); 
                             ?>
                         </button>
