--- a/view/frontend/templates/component/headline.phtml
+++ b/view/frontend/templates/component/headline.phtml
@@ -5,12 +5,15 @@ $viewModel = $block->getViewModel();
 $visibility = $block->getVisibilityClass();
 
 $tag = $viewModel->getHeadingTag();
+
+$componentClasses = $block->getSkipSpacing() ? ' cs-headline--skip-spacing' : ''; 
+$componentClasses .= ' ' . $block->getVar('headline/additional_css_classes');
 ?>
 
-<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--headline">
         <div class="cs-container__inner">
-            <div class="cs-headline <?= $block->getVar('headline/additional_css_classes'); ?>">
+            <div class="cs-headline<?= $componentClasses ?>">
                 <<?=$tag?> class="cs-headline__title"><?= $viewModel->getTitle() ?></<?=$tag?>>
                 <?php if ($viewModel->getSubtitle()): ?>
                     <p class="cs-headline__subtitle"><?= $viewModel->getSubtitle() ?></p>
