--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -15,8 +15,6 @@ $displayVariant = 'outside';
 $isSlider = false;
 $isSliderMobile = false;
 
-$mix = $block->getMix();
-
 if (in_array($imageTeaser['currentScenario']['mobileLayout']['id'], ['large', 'slider', 'col'])) {
     $itemsPerRowMobile = 1;
 }
@@ -39,13 +37,18 @@ if ($imageTeaser['currentScenario']['mobileLayout']['id'] == 'slider') {
     $isSliderMobile = true;
 }
 
+$componentClasses = $block->getMix();
+
 if ($imageTeaser['currentScenario']['mobileLayout']['id'] == '1-2') {
-    $mix .= ' cs-image-teaser--mobile-cfg-big-small-small';
+    $componentClasses .= ' cs-image-teaser--mobile-cfg-big-small-small';
 }
 
 if ($imageTeaser['currentScenario']['mobileLayout']['id'] == '1-2-1') {
-    $mix .= ' cs-image-teaser--mobile-cfg-big-small-small-big';
+    $componentClasses .= ' cs-image-teaser--mobile-cfg-big-small-small-big';
 }
+
+$componentClasses .= $block->getSkipSpacing() ? ' cs-image-teaser--skip-spacing' : ''; 
+$componentClasses .= ' ' . $block->getVar('image_teaser/additional_css_classes');
 
 if (isset($imageTeaser['currentScenario']['textPositioning']['id']) && $imageTeaser['currentScenario']['textPositioning']['id'] == 'over') {
     $displayVariant = 'inside';
@@ -64,7 +67,7 @@ if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'w-s') {
 $sizes = $sizesMobile . ', ' . $sizesDesktop;
 ?>
 
-<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--image-teaser">
         <?php if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'c' or $imageTeaser['currentScenario']['teaserWidth']['id'] == 'c-s'): ?>
         <div class="cs-container__inner">
@@ -74,7 +77,7 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
              cs-image-teaser--items-in-row-mobile-<?= $itemsPerViewMobile ?>
              <?= $isSlider ? 'cs-image-teaser--slider' : '' ?>
              <?= $imageTeaser['currentScenario']['teaserWidth']['id'] == 'w-s' ? 'cs-image-teaser--full-width-slider' : '' ?>
-             <?= $mix ?>"
+             <?= $componentClasses ?>"
                  data-items-per-view="<?= $itemsPerView ?>"
                 <?= $itemsPerViewMobile ? 'data-mobile-items-per-view="' . $itemsPerViewMobile . '"' : '' ?>
                  data-is-slider="<?= $isSlider ?>"
@@ -149,7 +152,6 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
                                                             ->setIconUrl($block->getVar('image_teaser/cta_button_icon_path'))
                                                             ->setCssClass('cs-image-teaser__cta-button-icon')
                                                             ->setInlined(true)
-                                                            ->setLazyLoaded(false)
                                                             ->toHtml(); 
                                                         ?>
                                                     </span>
@@ -173,7 +175,6 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
                                     ->setIconUrl($block->getVar('image_teaser/navigation/arrows/prev/path'))
                                     ->setCssClass('cs-image-teaser__nav-icon')
                                     ->setInlined(true)
-                                    ->setLazyLoaded(false)
                                     ->toHtml(); 
                             ?>
                         </button>
@@ -184,7 +185,6 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
                                 ->setIconUrl($block->getVar('image_teaser/navigation/arrows/next/path'))
                                 ->setCssClass('cs-image-teaser__nav-icon')
                                 ->setInlined(true)
-                                ->setLazyLoaded(false)
                                 ->toHtml(); 
                             ?>
                         </button>
