Fix cms teaser markup

--- a/view/frontend/templates/component/cms_teaser.phtml
+++ b/view/frontend/templates/component/cms_teaser.phtml
@@ -167,5 +167,5 @@ $componentClasses .= ' ' . $block->getVar('cms_teaser/additional_css_classes');
                 <?php endif; ?>
             </div>
         </div>
-    <div>
+    </div>
 </div>
